--- a/Recruitment/index.html
+++ b/Recruitment/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pirate.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=0.7" /> -->
     <title>Taco's Crew</title>
   </head>
   <body>
